project with functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <script src="scripts/quantity/module.js"></script>
         <script src="scripts/quantity/service.js"></script>
+        <script src="scripts/quantity/ticket-service.js"></script>
         <script src="scripts/quantity/bookTicketModulecontroller.js"></script>
         <script src="scripts/app.js"></script>
     </body>
